# scathanna3

./: Cargo.toml  README.md  server.toml  settings.toml
crates/shadowbake/: Cargo.toml
crates/shadowbake/src/: convert_gltf.rs  custom_properties.rs  lib.rs  parsed_gltf.rs  prelude.rs  validate_gltf.rs
crates/shadowbake/src/lightmap_baking/: accumulator.rs  bake.rs  bake_face.rs  bake_opts.rs  bounds2d.rs  filter.rs  lightmap_utils.rs  mod.rs  scene.rs
crates/shadowdiff/: Cargo.toml
crates/shadowdiff/src/: main.rs
crates/shadowfields/: Cargo.toml
crates/shadowfields/src/: lib.rs  log_buffer.rs  play_main.rs  prelude.rs  settings.rs
crates/shadowfields/src/color/: mod.rs  srgb.rs
crates/shadowfields/src/game/: animation_state.rs  diff_entities.rs  effect.rs  entities.rs  entity_id.rs  handle.rs  internal.rs  message.rs  mod.rs  player.rs  prop.rs  sound_effect.rs  system_utils.rs
crates/shadowfields/src/game/bot/: bot_settings.rs  bot_system.rs  debug.rs  mod.rs
crates/shadowfields/src/game/client/: advantage_system.rs  client.rs  client_command_system.rs  console_system.rs  debug_overlay_system.rs  drawing_system.rs  effects_system.rs  extrapolation_system.rs  footstep_system.rs  internal.rs  join_system.rs  jump_pad_system.rs  loading_screen.rs  mapswitch_system.rs  menu.rs  mod.rs  player_movement_system.rs  respawn_system.rs  server_message_system.rs  sound_system.rs  volumetric_light.rs  weapon_system.rs
crates/shadowfields/src/game/server/: autoswitch_system.rs  collision_system.rs  diffs.rs  health_system.rs  hud_system.rs  mod.rs  (+10 more)
crates/shadowfields/src/geom/: barycentric_coordinates.rs  meshbuffer.rs  meshbuffer2.rs  mod.rs  orientation.rs  transform.rs
crates/shadowfields/src/graphics/: anim_vaos.rs  bit_blitting.rs  buffer_uniforms.rs  camera.rs  canvas.rs  counters.rs  embedded_font.rs  graphics_ctx.rs  graphics_opts.rs  instance_data.rs  internal.rs  light_box.rs  mipmap.rs  mod.rs  object.rs  scenegraph.rs  shader.rs  shader_pack.rs  storage_buffer.rs  text_layout.rs  texture.rs  texture_opts.rs  vertex_lm.rs
crates/shadowfields/src/hud/: hud.rs  internal.rs
crates/shadowfields/src/img/: img.rs
crates/shadowfields/src/map/: collider_face.rs  gltf_object.rs  internal.rs  jump_pad.rs  map.rs  material_palette.rs  metadata.rs  mod.rs  pickup_point.rs  point_light_def.rs  primitive.rs  scene_mesh.rs  spawn_point.rs  sun_def.rs  timer.rs
crates/shadowfields/src/net/: mod.rs  netpipe.rs  wireformat.rs
crates/shadowfields/src/physics/: frame.rs  internal.rs  mod.rs  physics_util.rs  skeleton.rs
crates/shadowfields/src/raytrace/: boundingbox.rs  bvh_tree.rs  halton.rs  integration.rs  internal.rs  mappings.rs  ray.rs  triangle.rs  util.rs
crates/shadowfields/src/resources/: animation_pack.rs  assets_dir.rs  blocking_cache.rs  effect_pack.rs  gameobject_def.rs  host_material.rs  internal.rs  material.rs  material_def.rs  mod.rs  resources.rs  sound_pack.rs
crates/shadowfields/src/shell/: inputs.rs  keymap.rs  mod.rs  monitoring_stream.rs  mouse_filter.rs  profiler.rs  shell3.rs  winit_handle.rs
crates/shadowfields/src/sound/: internal.rs  mixer.rs  ringbuffer.rs  spatial_filter.rs
crates/shadowfields/src/util/: cartesian_product.rs  color.rs  debug_warn.rs  fileutil.rs  flag_override.rs  inspect_err.rs  map_values.rs  math.rs  misc.rs  mod.rs  random.rs
(+57 files in other folders)
