[package]
name = "shadowdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadowfields = {path = "../shadowfields"}
image = { version = "0.24", default-features = false, features = [
	"png",
	"jpeg",
] }
clap = { version = "4", features = ["derive", "error-context", "std", "usage"] }
env_logger = "0.10"